--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [profile.release]
 opt-level = 3
 strip = "symbols"
+lto = true
+codegen-units = 1
+panic = "abort"
 
 [dependencies]
 winreg = "0.55.0"
