--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gui-app"
+name = "key-light-control"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,8 +12,8 @@ panic = "abort"
 
 [dependencies]
 winreg = "0.55.0"
-reqwest = { version = "0.12.15", features = ["json"] }
-tokio = { version = "1.42.0", features = ["full"] }
+reqwest = { version = "0.12.17", features = ["json"] }
+tokio = { version = "1.45.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.133"
 log = "0.4.22"
