--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - 'v*'   # Only run on version tags like v1.0.0
+    branches:
+      - master
+    # tags:
+      # - 'v*'   # Only run on version tags like v1.0.0
 
 jobs:
   build:
