fix: add step to zip executable before creating GitHub Release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,9 @@ jobs:
         with:
           name: key-light-control
 
+      - name: Zip executable
+        run: Compress-Archive -Path key-light-control.exe -DestinationPath key-light-control.zip
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
