--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,25 +28,28 @@ jobs:
         with:
           name: key-light-control
           path: target/release/key-light-control.exe
-
+          
   release:
     needs: build
     runs-on: windows-latest
     if: startsWith(github.ref, 'refs/tags/v')
+    
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: key-light-control
-
+          
       - name: Zip executable
         run: Compress-Archive -Path key-light-control.exe -DestinationPath key-light-control.zip
-
+        
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: key-light-control.zip
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
