--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "key-light-control"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+license = "MIT"
+readme = "README.md"
+authors = ["Mikhail Zhadanov"]
+publish = false
 
 [profile.release]
 opt-level = 3
