--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,11 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Add MSVC target
+        run: rustup target add x86_64-pc-windows-msvc
+
       - name: Build release
-        run: cargo build --release
+        run: cargo build --release --target x86_64-pc-windows-msvc
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
