--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,13 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust
+      - name: Install Rust (MSVC)
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.71.0
           override: true
 
       - name: Add MSVC target
@@ -30,24 +29,24 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: key-light-control
-          path: target/release/key-light-control.exe
-          
+          path: target/x86_64-pc-windows-msvc/release/key-light-control.exe
+
   release:
     needs: build
     runs-on: windows-latest
     if: startsWith(github.ref, 'refs/tags/v')
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: key-light-control
-          
+
       - name: Zip executable
         run: Compress-Archive -Path key-light-control.exe -DestinationPath key-light-control.zip
-        
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
